Specified Media Type

--- a/index.html
+++ b/index.html
@@ -113,8 +113,12 @@
 						<p>It is too late for you now, weep for your end is nigh.</p>
 					</details>
 				<h3>Meeting Recording</h3>
-					<video controls width="750" src="/meeting-recording.mp4"></video><br>
-					<audio controls src="/meeting-recording.mp4"></audio>
+					<video controls width="750">
+						<source src="/meeting-recording.mp4" type="video/mp4">
+					</video><br>
+					<audio controls>
+						<source src="/meeting-recording.mp3" type="audio/mp3">
+					</audio>
 			</section>
 			<section>
 				<h2>Tomorrow's Meeting</h2>
