Modified href Links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Meeting Minutes</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="/style.css"/>
+		<link rel="stylesheet" href="style.css"/>
 		<link rel="icon" href="favicon.ico">
 
 		<style>
@@ -128,10 +128,10 @@
 					</details>
 				<h3>Meeting Recording</h3>
 					<video controls width="750">
-						<source src="/meeting-recording.mp4" type="video/mp4">
+						<source src="meeting-recording.mp4" type="video/mp4">
 					</video><br>
 					<audio controls>
-						<source src="/meeting-recording.mp3" type="audio/mp3">
+						<source src="meeting-recording.mp3" type="audio/mp3">
 					</audio>
 			</section>
 			<section style="opacity: 35%;">
