Added Required CSS Selectors

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 			</section>
 			<section style="opacity: 35%;">
 				<h2>Tomorrow's Meeting</h2>
-				<h3>Empty, for tomorrow is yet to come.</h3>
+				<h3 class="crossed">Empty, for tomorrow is yet to come.</h3>
+				<p class="crossed">Text would go here!</p>
 				<h3 class="invis">Maybe some magic tricks?</h3>
 			</section>
 		</main>
