Added Media Query & Google Font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<link rel="stylesheet" href="style.css"/>
 		<link rel="icon" href="favicon.ico">
 
+		<!-- https://fonts.google.com/share?selection.family=Exo+2:ital,wght@0,100..900;1,100..900 -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+		
 		<style>
 			header, footer {
 				background-color: antiquewhite;
